fixtures/parser/invalid/php85_invalid.php
<?php
// invalid: pipe operator is missing a right-hand callable

$value = 1 |> ;
